--- a/package.json
+++ b/package.json
@@ -12,8 +12,10 @@
   },
   "dependencies": {
     "@mdi/font": "^7.1.96",
+    "firebase": "^11.2.0",
     "vue": "^3.5.13",
     "vue-router": "^4.1.6",
+    "vuefire": "^3.2.1",
     "vuetify": "^3.0.6"
   },
   "devDependencies": {
